@@ -1,3 +1,9 @@
+2024-06-03 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/z80/gen.c,
+	  support/regression/tests/bug-3740.c:
+	  Fix bug #3740.
+
 2024-05-31 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/z80/peep.c:
